--- a/aulas/server/package.json
+++ b/aulas/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build": "npx tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "prestart": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
     "jest": "^28.1.0",
+    "prettier-plugin-prisma": "^3.14.0",
     "prisma": "^3.14.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
